truth-engine/qssm-api/tests/ui/entropy_not_reexported.rs
// Accessing entropy types through qssm_api must fail — they were removed.
fn main() {
    let _ = qssm_api::harvest_entropy_seed();
}
